--- a/app/src/main/res/layout/recyclerview_item_account.xml
+++ b/app/src/main/res/layout/recyclerview_item_account.xml
@@ -7,22 +7,24 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:paddingStart="15dp"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
-        android:id="@+id/amount"
+        android:id="@+id/tv_amount"
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:paddingEnd="15dp"
         android:textSize="15sp"
         android:layout_height="35dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 </androidx.constraintlayout.widget.ConstraintLayout>
