--- a/app/src/main/res/layout/recyclerview_item_transaction_group.xml
+++ b/app/src/main/res/layout/recyclerview_item_transaction_group.xml
@@ -2,41 +2,37 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/withdrowal"
+        android:id="@+id/tv_withdrowal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="TextView"
         android:textColor="@color/white"
         android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/deposit"
+        app:layout_constraintStart_toEndOf="@+id/tv_deposit"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/deposit"
+        android:id="@+id/tv_deposit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="TextView"
         android:textColor="@color/white"
         android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/month"
+        app:layout_constraintStart_toEndOf="@+id/tv_month"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/month"
+        android:id="@+id/tv_month"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-        android:text="TextView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +48,7 @@
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/month" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_month" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_child"
